12.03.2019:Added teaser text to dog page 03.04.2019: Corrected scroll behaviour when navigating to new page.             Corrected Feeding table in productdetail page to display aligned with other sections.

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -39,9 +39,9 @@ h1, h2, h3, h4, h5, h6 {
 	}
 }
 
-h1 { font-size: 60px; }
+/*h1 { font-size: 60px; }*/
 h2 {
-	font-size: 48px;
+	/*font-size: 48px;*/
 
 	&.section-heading {
 		font-size: 24px;
@@ -127,7 +127,7 @@ html, body {
 
 body {
 	line-height: 1.8em;
-	overflow-x: hidden;
+	//overflow-x: hidden;
 	position: relative;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
